# learn-scrapy

./: .gitignore  README.md  authors.py  login.py  pyproject.toml  quotes.py  quotes_scroll.py
scrape_cover/: README.md  scrapy.cfg
scrape_cover/scrape_cover/: items.py  middlewares.py  pipelines.py  settings.py
scrape_cover/scrape_cover/spiders/: bookstoscrape.py
splash_based_project/: scrapy.cfg
splash_based_project/splash_based_project/: items.py  middlewares.py  pipelines.py  settings.py
splash_based_project/splash_based_project/spiders/: quotejs.py
