[tool.poetry]
name = "learn-scrapy"
version = "0.1.0"
description = "Free Scrapy Tutorials To Learn Web Scraping"
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
